# FileExplorerC

./: .gitmodules  CMakeLists.txt
src/: App.cpp  App.h  CMakeLists.txt  main.cpp
src/app/backend/: BackendService.cpp  BackendService.h
src/app/filesystem/Events/: FileSystemEvents.cpp  FileSystemEvents.h
src/connection/: SocketConnection.cpp  SocketConnection.h
src/filesystem/: CacheService.cpp  CacheService.h  FileSystem.cpp  FileSystem.h
src/filesystem/Events/: FileSystemEvents.cpp
src/render/: App.cpp  App.h
src/render/components/: FileSystemView.cpp  FileSystemView.h
src/render/components/fileview/: FileView.cpp  FileView.h
src/render/components/navbar/: NavBar.cpp  NavBar.h
src/render/components/navbar/pathview/: PathView.cpp  PathView.h
src/render/filesystem/: FileSystem.cpp  FileSystem.h
src/search/: FindFiles.cpp  FindFiles.h
src/search/match/: Match.cpp  Match.h
src/search/search/: Search.cpp  Search.h
tests/: TestSocket.py
